--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BlogContext": "Server=(localdb)\\mssqllocaldb;Database=BlogContext-5fdf7a4c-602b-4d55-9008-631173c40bf3;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
